--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -3,11 +3,11 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Llamados">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="cl.gambadiez.llamadosdeemergencia.MapaActivity">
 
-    <ListView
-        android:layout_width="wrap_content"
+    <TextView android:text="llamado" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/llamadosListView" />
+        android:id="@+id/llamadoTextView" />
 
 </RelativeLayout>
