--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,9 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="cl.gambadiez.llamadosdeemergencia.Map">
 
+
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.MapFragment"/>
+        android:name="com.google.android.gms.maps.MapFragment"
+        tools:layout="@layout/activity_map" />
 </RelativeLayout>
